--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@ canvas {
   left: 0;
   right: 0;
   z-index: 1000; /* This ensures the navbar stays above other elements on the page */
+  padding-right: 3vw;
 }
 
 .navbar-collapse {
@@ -212,3 +213,31 @@ canvas {
 .circle-button.selected {
   z-index: 2;
 }
+
+
+/* Button */
+.prompt-button {
+  background: linear-gradient(145deg, #f5d8ba, #ebc092);
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-family: 'Arial', sans-serif; /* Adjust to the font you want */
+  font-size: 18px;
+  font-weight: bold;
+  color: #5a4a42;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 5px 5px 15px #d4b48c, -5px -5px 15px #ffe4c6; /* Gives the 3D appearance */
+  transition: transform 0.2s;
+}
+
+.prompt-button:hover {
+  transform: translateY(-2px);
+}
+
+.prompt-button:active {
+  transform: translateY(0);
+}
+
+
+
