--- a/src/pages/Draw.css
+++ b/src/pages/Draw.css
@@ -1,10 +1,130 @@
+#drawPage {
+    height: 100%;
+    display:flex;
+    flex-direction:column;
+}
+
+#canvasContainer {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #canvas {
     aspect-ratio: 2 / 3;
-    max-width: 90vw;
-    max-height: 80vh;
+    
     border: 3px solid #5C370A;
     border-radius: 10px;
     background-color: #ffffff;
-    margin: 1rem;
+    margin: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: 767px) {
+        width: 100%;
+    }
+
+    @media only screen and (min-width: 767px) {
+        height: 100%;
+    }
 }
 
+#canvas h1 {
+    margin: 8px 0px;
+    font-size: 30px;
+}
+
+#canvas h2 {
+    margin: 8px 0px;
+    width: 250px;
+    font-size: 24px;
+    text-align: center;
+}
+
+#promptCountdown {
+    font-size: 64px;
+}
+
+#drawHeader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    /* height: 72px; */
+    margin: 20px;
+
+    background-color: #FFEED3;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    transition: opacity 0.5s ease-in-out;
+}
+
+#drawLogo {
+    height: 30px;
+}
+
+#drawPrompt {
+    margin-top: -8px;
+    font-size: 24px;
+}
+
+#drawCountdown {
+    font-size: 36px;
+}
+
+#canvas canvas {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+}
+
+#colorPicker {
+    padding: 20px;
+    height: 40px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.colorButton {
+
+}
+
+.colorButtonSelected {
+
+}
+
+.color-brown {
+
+}
+
+.color-red {
+
+}
+
+.color-yellow {
+
+}
+
+.color-green {
+
+}
+
+.color-blue {
+
+}
+
+.color-purple {
+
+}
