--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -5,11 +5,6 @@
     background-color: #ffffff;
     margin: 1rem;
     position: absolute;
-
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
     margin: auto;
 
     max-width: 75vw;
@@ -29,3 +24,56 @@
     -ms-user-select: none;
 }
 
+#gallery {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#galleryInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 12px 0;
+}
+
+#galleryInfo h1 {
+    font-size: 36px;
+    margin: 8px;
+    padding: 0;
+}
+
+#galleryInfo p {
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    font-style: italic;
+}
+
+#galleryImages {
+    flex: 1;
+}
+
+#galleryUserContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#galleryUser {
+    width: 240px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0;
+}
+
+#galleryUser p {
+    font-size: 24px;
+}
+
+#galleryUser img {
+    height: 50px;
+}
