--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-#root {
-  height: 100%;
-  width: 100%;
-}
-
 #navbar {
   display: flex;
   justify-content: space-between;
@@ -78,6 +73,12 @@ body {
 #root {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
+
+  @media only screen and (max-width: 767px) {
+    height: 90%;
+  }
 }
 
 main {
