--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -10,6 +10,8 @@
     max-width: 75vw;
     max-height: 50vh;
     z-index: 1000;
+
+    touch-action: none;
 }
 
 .drawing {
@@ -67,11 +69,12 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 40px 0;
+    margin: 10px 0;
 }
 
 #galleryUser p {
     font-size: 24px;
+    margin: 0;
 }
 
 #galleryUser img {
