--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -8,11 +8,12 @@
     margin: auto;
 
     max-width: 60vw;
-    max-height: 45vh;
+    max-height: 40vh;
     z-index: 1000;
 
     touch-action: none;
-    bottom: -80px!important;
+    bottom: 25%!important;
+    top: initial!important;
 }
 
 .drawing {
