--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -12,8 +12,6 @@
     z-index: 1000;
 
     touch-action: none;
-    bottom: 25%!important;
-    top: initial!important;
 }
 
 .drawing {
@@ -57,6 +55,7 @@
 
 #galleryImages {
     flex: 1;
+    position: relative;
 }
 
 #galleryUserContainer {
