Fix home page text

--- a/src/pages/Draw.css
+++ b/src/pages/Draw.css
@@ -202,6 +202,7 @@
 }
 
 .logo-in-text {
-    height: 5vh;
-    margin-left: 1vw;
+    height: 48px;
+    margin-bottom: -10px;
+    margin-left: 13px;
 }
