--- a/src/pages/Live.css
+++ b/src/pages/Live.css
@@ -1,10 +1,10 @@
-.drawing-container {
+.drawing-container-live {
     aspect-ratio: 2 / 3;
     border: 3px solid #5C370A;
     border-radius: 10px;
     background-color: #ffffff;
     margin: 1rem;
-    position: absolute;
+    position: unset;
     margin: auto;
 
     max-width: 55vw;
@@ -14,7 +14,7 @@
     touch-action: none;
 }
 
-.drawing {
+.drawing-live {
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -24,60 +24,4 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-}
-
-#gallery {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-#galleryInfo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 12px 0;
-}
-
-#galleryInfo h1 {
-    font-size: 36px;
-    margin: 8px;
-    padding: 0;
-}
-
-#galleryInfo p {
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    font-style: italic;
-}
-
-#galleryImages {
-    flex: 1;
-    position: relative;
-}
-
-#galleryUserContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#galleryUser {
-    width: 240px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
-}
-
-#galleryUser p {
-    font-size: 24px;
-    margin: 0;
-}
-
-#galleryUser img {
-    height: 50px;
 }
