--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ main {
   /* padding: 15%; */
   padding-left: 15%;
   padding-right: 30%;
-  padding-top: 10%;
+  padding-top: 5%;
   transition: all 2s ease;
 }
 
@@ -157,7 +157,7 @@ main {
 }
 
 .button-container {
-  padding-top: 12%;
+  padding-top: 3%;
   text-align: center;
 }
 
@@ -198,11 +198,15 @@ main {
 
 .parent-feed-maximized {
   display: flex;
+  width: 100%;
   max-width: 100%;
+  align-items: flex-start;
+  justify-content: flex-start;
+  /* padding: 5%; */
   /* padding: 15%; */
-  padding-left: 15%;
+  /* padding-left: 15%;
   padding-right: 30%;
-  padding-top: 10%;
+  */
   transition: all 2s ease;
 }
 
@@ -223,7 +227,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 5%;
+  padding-top: 80px;
 }
 
 .column-1-maximized .live-text-maximized {
@@ -266,16 +270,30 @@ main {
 
 .results-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 35px;
   justify-content: center;
   margin-top: 20px; 
-  height: 300px;
-  width: 300px;
+  /* height: 300px;
+  width: 300px; */
+  width: 60%;
+  padding: 80px;
+  margin-top: -25px;
 }
 
 .result-item {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #FFEED3;
+  color: #5C370A;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 
