--- a/src/App.css
+++ b/src/App.css
@@ -227,7 +227,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 80px;
+  padding-top: 60px;
 }
 
 .column-1-maximized .live-text-maximized {
@@ -272,7 +272,8 @@ main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 35px;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-end;
   margin-top: 20px; 
   /* height: 300px;
   width: 300px; */
